// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the round back button matches the snapshot 1`] = `
.c2 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c2:hover,
.c2:focus {
  color: #fff;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  background-repeat: no-repeat;
  background-image: url( angle-left.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c0 {
  min-width: 152px;
}

<a
  ariaLabel={null}
  className="c0 c1 c2"
  href="/"
  linkRel={null}
  onClick={[Function]}
>
  ButtonValue
</a>
`;

exports[`the round back button with button type given matches the snapshot 1`] = `
.c2 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c2:hover,
.c2:focus {
  color: #fff;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  background-repeat: no-repeat;
  background-image: url( angle-left.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c0 {
  min-width: 152px;
}

<a
  ariaLabel={null}
  className="c0 c1 c2"
  href="/"
  linkRel={null}
  onClick={[Function]}
  type="button"
>
  ButtonValue
</a>
`;
